--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue-router": "4.1.6",
     "vue3-apexcharts": "1.4.1",
     "vue3-perfect-scrollbar": "1.6.1",
+    "vue3-toastify": "^0.2.8",
     "vuetify": "3.2.0",
     "webfontloader": "1.6.28"
   },
