view and change status of order item is ready

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,7 @@
     },
     // Vue
     "[vue]": {
-        "editor.defaultFormatter": "Vue.volar",
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
     },
     // Extension: Volar
     "volar.preview.port": 3000,
